# rqt_bag_ffmpeg_plugin

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
src/rqt_bag_ffmpeg_plugin/: bag_video_decoder.py  ffmpeg_plugin.py  ffmpeg_view.py
